tests/fail/bad-decorator-ordering.astr
module bad-decorator-ordering

attributes

  decorator foo(a) = a
  
  decorator bar(a) = a

  def foo bar x = id
  
  def bar foo x = id
